# TestDataBuilderKata

./: .gitignore  CMakeLists.txt  Initial.cpp  README.md
src/: CMakeLists.txt  channel.c  channel.h
test/: CMakeLists.txt  main.c  test_channel.c  test_data_builders.c  test_data_builders.h
